make body white, add space between session events to prevent Jour overlapping

--- a/session-events.less
+++ b/session-events.less
@@ -184,6 +184,7 @@
 
   .data-card.data-card-row.data-card-lg.data-card-clickable {
     padding-top: 10px;
+    padding-bottom: 50px;
     border: 0; /* може да се махне, по default тия дивове мисля, че имаха бордер по 1px от всички страни */
   }
 
