--- a/variables.less
+++ b/variables.less
@@ -1,6 +1,7 @@
 @font-family-sans-serif: 'Overpass', sans-serif;
 @headings-font-family: 'Overpass', sans-serif;
 
+@body-bg: #ffffff;
 @top-bar-bg: #69605a;
 @brand-primary: #337ab7;
 @brand-secondary: #fee223;
@@ -9,3 +10,4 @@
 @footer-link-color: #fee223;
 @footer-link-hover-color: lighten(@footer-link-color, 20%);
 @login-bg-image: 'https://www.elitefts.com/wp/wp-content/uploads/2012/03/1267399_14479084.jpg';
+
